08/30/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed null pointer exception when trying to cut a node that can't be
      cut.

08/29/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated japanese translation

08/21/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated russian translation.

08/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed undo when adding/editing a node that is specified in a DTD/Schema.

08/07/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * The Edit menu has been moved to jsXe core.

08/03/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added some English tooltip messages to the Global Options Pane for the
      tree view.

07/20/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated actions and messages for options.
    * Added Japanese translation.

07/13/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed problem where the shortcut for Adding an element node wasn't 
      showing in the popup menu.
    * Fixed problem where the shortcut for Adding and removing an attribute
      wasn't showing in the popup menu.

07/12/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated TreeViewTree to use the WrappingMenu instead of EnhancedMenu
      since it was renamed.

07/06/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated to support the new Messages format.

06/25/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Feature Request 1494444: Updated the tree view so that if no attributes
      are defined in the Schema/DTD for the element then the Edit Node dialog
      will not be displayed.

06/23/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added back rudimentary key bindings using Swing Actions so they get
      dispached by Swing and are displayed in menus. But infrastructure is
      in place to allow jsXe to catch key bindings itself.

06/21/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated TreeViewTree to use the new package for EnhancedMenu so it